[package]
name = "arma3-wiki-github"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2021"

[lints]
workspace = true

[dependencies]
arma3-wiki = { path = "../clients/rust" }

fs-err = { workspace = true }
octocrab = { version = "0.49.5" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["full"] }
urlencoding = { workspace = true }
