[package]
name = "arma3-wiki-github"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2021"

[lints]
workspace = true

[dependencies]
arma3-wiki-model = { path = "../model" }

fs-err = { workspace = true }
octocrab = { version = "0.49.7" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["full"] }
urlencoding = { workspace = true }

rustls = { version = "0.23.37", default-features = false, features = [
    "aws-lc-rs",
] }
