[package]
name = "arma3-wiki-parse"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2024"

[lints]
workspace = true

[dependencies]
arma3-wiki = { path = "../clients/rust", features = ["parser"]}
arma3-wiki-github = { path = "../bin-github" }

fs-err = { workspace = true }
futures = "0.3.31"
httpdate = { version = "1.0.3" }
indicatif = { version = "0.18.3" }
regex = { version = "1.12.2" }
reqwest = { version = "0.13.1" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true , features = ["full"] }
urlencoding = { workspace = true }
