[package]
name = "arma3-wiki-website"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
arma3-wiki = { path = "../clients/rust" }
fs-err = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
