[package]
name = "arma3-wiki"
description = "A project to store data about Arma 3 commands in a useable format"
license = "MIT"
version = "0.5.5"
edition = "2024"

[lints]
workspace = true

[dependencies]
directories = "6.0.0"
fs-err = { workspace = true }
regex = "1.12.2"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

# Local
rust-embed = { version = "8.9.0", features = ["interpolate-folder-path"] }

# Remote
git2 = { version = "0.20.3", optional = true }

[features]
default = ["remote", "parser"]
remote = ["git2"]
parser = []

[build-dependencies]
directories = "6.0.0"
fs_extra = { version = "1.3.0" }
fs-err = { workspace = true }
git2 = { version = "0.20.3" }
rand = "0.9.2"
