[package]
name = "arma3-wiki"
description = "A project to store data about Arma 3 commands in a useable format"
license = "MIT"
version = "0.7.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arma3-wiki-model = { path = "../../model" }

directories = "6.0.0"
fs-err = { workspace = true }
regex = "1.12.3"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

# Local
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }

# Remote
git2 = { version = "0.20.4", optional = true }

[features]
default = ["remote"]
remote = ["git2"]

[build-dependencies]
arma3-wiki-model = { path = "../../model" }
directories = "6.0.0"
fs_extra = { version = "1.3.0" }
fs-err = { workspace = true }
git2 = { version = "0.20.4" }
rand = "0.9.2"
